# mcp-client

./: client.py  compose.yaml  open_client.py  pyproject.toml  server.py
app/: main.py  pyproject.toml
app/api/v1/routers/: conversation.py
app/core/: config.py  mcp_client.py  storage.py
app/schemas/: conversation.py
servers/: location.py  mail.py  message.py  weather.py
servers/secret/app/: main.py
servers/weather/app/: pyproject.toml
